--- a/src/components/ImagemEntrada/ImagemEntrada.css
+++ b/src/components/ImagemEntrada/ImagemEntrada.css
@@ -1,9 +1,8 @@
 .ImagemEntrada {
   background: url(src/imgs/FundoEntrada.png) no-repeat center center/cover; 
-  height: 1040px;
-  width: 1040px;
-  position: absolute;
-  top: -60px; 
-  right: -130px;
-  bottom: 0;
+  display: flex;
+  flex-direction: row-reverse;
+  justify-content: flex-end;
+  height: 100vh;
+  width: 60vh;
 }
