--- a/src/components/ImagemEntrada/ImagemEntrada.css
+++ b/src/components/ImagemEntrada/ImagemEntrada.css
@@ -1,8 +1,12 @@
 .ImagemEntrada {
-  background: url(src/imgs/FundoEntrada.png) no-repeat center center/cover; 
   display: flex;
-  flex-direction: row-reverse;
-  justify-content: flex-end;
+  flex-direction: row;
+  justify-content: center;
   height: 100vh;
-  width: 60vh;
+  width: 70vw;
+}
+.imgentrada{
+  margin-top: -160px;
+  width: 100vw;
+  height: 130vh;
 }
