--- a/src/pages/TelaLogin/TelaLogin.css
+++ b/src/pages/TelaLogin/TelaLogin.css
@@ -1,29 +1,86 @@
-.geral{
-    width: 100vh;
+@import url('https://fonts.googleapis.com/css2?family=Montserrat:ital,wght@0,100..900;1,100..900&display=swap');
+body{
+    background-color: #FBF8F4;
+    
+}
+.gerallogin{
+    width: 100vw;
     height: 100vh;
     display: flex;
     flex-direction: row;
 }
-.esquerda{
+.esquerdalogin{
     display: flex;
     flex-direction: column;
-    width: 45vh;
+    width: 30vw;
     height: 100vh;
-    justify-content: space-around;
-   
+    justify-content: flex-start;
+    align-items: center;
+}
+.login{
+    display: flex;
+    flex-direction: column;
+    width: 30vw;
+    height: 50vh;
+    justify-content: flex-start;
+    align-items: center;
+}
+.titulologin{
+    font-family: "Montserrat";
+    font-size: 64px;
+    font-weight: 400;
+    text-align: left;
+    color: #4B626C;
+    margin-bottom: 10%;
 }
 .logar{
     height: 100vh;
-    width: 45vh;
+    width: 30vw;
     display: flex;
     flex-direction: column;
-    justify-content: space-around;
+    justify-content: flex-start;
+    align-items: center;
 }
-.login-links{
-    height: 40vh;
-    width: 45vh;
+.inputlogin{
+    margin-bottom: 10%;
+    border-radius: 5px;
+    height: 35px;
+    width: 300px;
+    border: 0;
+    box-shadow: 0px 4px 20px 0px #00000040;
+    background-color: #FBF8F4;
+    font-family: Montserrat;
+    font-weight: 300;
+    text-align: left;
+}
+.botaologin{
+    margin-left: 45%;
     display: flex;
-    flex-direction: column-reverse;
-    
+    width: 42px;
+    height: 30px;
+    background-image: url(src/imgs/botao.png);
+    border: 0;
+    background-color: #FBF8F4;
+}
+.loginlinks{
+    display: flex;
+    flex-direction: column;
+    justify-content: flex-end;
+    margin-bottom: 5vh;
+    font-family: "Montserrat";
+    font-size: 15px;
+    text-align: end;
+    height: 50vh;
+    width: 30vw;
+    margin-left: 50%;
+    margin-bottom: 25%;
+}
+.reflogin{
+    text-decoration: none;
+    color: #97A4A2;
+    font-family: Montserrat;
+    font-weight: 500;
+    text-align: left;
+    font-size: 16px;
 }
 
