--- a/src/pages/TelaRegistro/TelaRegistro.css
+++ b/src/pages/TelaRegistro/TelaRegistro.css
@@ -18,6 +18,7 @@ body{
     align-items: center;
 }
 .reg{
+    flex-grow: 1;
     display: flex;
     flex-direction: column;
     width: 30vw;
@@ -68,16 +69,13 @@ body{
 }
 .reglinks{
     display: flex;
-    flex-direction: column;
-    justify-content: flex-end;
+    justify-content: flex-start;
     margin-bottom: 5vh;
     font-family: "Montserrat";
-    font-size: 15px;
-    text-align: end;
-    height: 50vh;
-    width: 30vw;
-    margin-left: 50%;
-    margin-bottom: 25%;
+    text-align: start;
+    margin-left: -35%;
+    margin-bottom: 30%;
+
 }
 .refreg{
     text-decoration: none;
