--- a/src/pages/TelaRegistro/TelaRegistro.css
+++ b/src/pages/TelaRegistro/TelaRegistro.css
@@ -1,8 +1,4 @@
 @import url('https://fonts.googleapis.com/css2?family=Montserrat:ital,wght@0,100..900;1,100..900&display=swap');
-body{
-    background-color: #FBF8F4;
-    
-}
 .geralreg{
     width: 100vw;
     height: 100vh;
@@ -66,6 +62,7 @@ body{
     background-image: url(src/imgs/botao.png);
     border: 0;
     background-color: #FBF8F4;
+    cursor: pointer;
 }
 .reglinks{
     display: flex;
