--- a/src/pages/TelaRecup/TelaRecup.css
+++ b/src/pages/TelaRecup/TelaRecup.css
@@ -1,8 +1,4 @@
 @import url('https://fonts.googleapis.com/css2?family=Montserrat:ital,wght@0,100..900;1,100..900&display=swap');
-body{
-    background-color: #FBF8F4;
-    
-}
 .geralrecup{
     width: 100vw;
     height: 100vh;
@@ -77,6 +73,7 @@ body{
     background-image: url(src/imgs/botao.png);
     border: 0;
     background-color: #FBF8F4;
+    cursor: pointer;
 }
 .recuplinks{
     display: flex;
