--- a/src/components/Cabecalho/Cabecalho.css
+++ b/src/components/Cabecalho/Cabecalho.css
@@ -8,6 +8,7 @@
     height: 10vh;
     background-color: #FBF8F4;
     position: fixed;
+    box-shadow: 0px 4px 4px 0px #00000040;
 }
 .cabecalhonav{
     width: 100vw;
