--- a/src/pages/TelaPopulares/TelaPopulares.css
+++ b/src/pages/TelaPopulares/TelaPopulares.css
@@ -2,60 +2,120 @@
 .popularesgeral{
     display: flex;
     flex-direction: column;
+    justify-content: sp;
     width: 100vw;
     height: 100vh;
     overflow: scroll;
 }
-.midpopulares{
+.titulogeralpop{
     margin-top: 10vh;
-    width: 100vw;
-    height: 90vh;
+    display: flex;
+    flex-direction: row;
+    margin-left: 25vh;
+    margin-bottom: 5vh;
+}
+.midpopulares{
+    width: 70vw;
+    height: 140vh;
     display: flex;
     flex-direction: column;
-    justify-content: flex-start;
-    
+    margin-left: 15vw;
+    margin-bottom: 20vh;
 }
 .titlepopulares{
-    font-family: Montserrat;
+    font-family: Montserrat;    
     font-size: 36px;
     font-weight: 700;
     text-align: left;
     color: #4B626C;
-    margin-left: 3%;
-    margin-top: 2%;
+    
 }
 .firstmidpop{
     display: flex;
     flex-direction: row;
-    justify-content: flex-start;
+    justify-content: space-evenly;
     align-items: center;
+    margin-bottom: 10vh;
 }
 .imagempopularese{
-
+    display: flex;
+    flex-direction: column;
+}
+.iconimgpop{
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    background-color: #4B626C;
+    width: 50px;
+    height: 50px;
+    border-radius: 50px;
+}
+.icontextpop{
+    font-family: Montserrat;
+    font-size: 24px;
+    font-weight: 600;
+    text-align: center;
+    color: #FBF6F0;
 }
 .imgpopulares{
-
+    width: 479px;
+    height: 270.84px;
 }
 .textpopulares{
-
+    display: flex;
+    flex-direction: column;
+    justify-content: space-between;
 }
 .titletextpopulares{
-
+    height: 40px;
+    font-family: Montserrat;
+    font-size: 32px;
+    font-weight: 600;
+    text-align: center;
+    color: #4B626C;
 }
 .ppopulares{
-
+    height: 230px;
+    width: 663px;
+    font-family: Montserrat;
+    font-size: 20px;
+    font-weight: 300;
+    text-align: justify;
+    color:  #4B626C ;
 }
 .secondmidpop{
     display: flex;
     flex-direction: row-reverse;
-    justify-content: flex-start;
+    justify-content: space-evenly;
     align-items: center;
+    margin-bottom: 10vh;
 }
 .thirdmidpop{
     display: flex;
     flex-direction: row;
-    justify-content: flex-start;
-    align-items: center;
+    justify-content: space-evenly;
+    align-items: center; 
 }
+.carrinhoiconpop{
+   height: 41px;
+   width: 41px;
+}
+.carrinhopop{
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    height: 50px;
+    width: 50px;
+    border: 0;
+    border-radius: 50px;
+    background-color: #4B626C;
+    border: 2px solid #FFFFFF
+}
+.imgcarrinhopop{
+    height: 50px;
+    width: 50px;
+    color: #FFFFFF;
+}
+  
 
 
