--- a/src/pages/TelaPopulares/TelaPopulares.css
+++ b/src/pages/TelaPopulares/TelaPopulares.css
@@ -7,6 +7,10 @@
     height: 100vh;
     overflow: scroll;
 }
+.toppopulares {
+    position: relative; 
+    z-index: 1000; 
+}
 .titulogeralpop{
     margin-top: 10vh;
     display: flex;
@@ -37,11 +41,15 @@
     align-items: center;
     margin-bottom: 10vh;
 }
-.imagempopularese{
-    display: flex;
-    flex-direction: column;
+.imagempopulares{
+    position: relative;
+    z-index: 1;
 }
 .iconimgpop{
+    position: absolute;
+    z-index: 2;
+    top: -25px;
+    left: -25px;
     display: flex;
     align-items: center;
     justify-content: center;
@@ -96,26 +104,30 @@
     justify-content: space-evenly;
     align-items: center; 
 }
+.ajustarcarrinho{
+    margin-top: 3%;
+    width: 73vw;
+    display: flex;
+    flex-direction: row;
+    justify-content: flex-end;
+}
 .carrinhoiconpop{
-   height: 41px;
-   width: 41px;
+   display: flex;
+   flex-direction: row;
+   justify-content: flex-end;
 }
 .carrinhopop{
     display: flex;
     align-items: center;
     justify-content: center;
-    height: 50px;
-    width: 50px;
-    border: 0;
-    border-radius: 50px;
+    height: 75px;
+    width: 75px;
+    border-radius: 75px;
     background-color: #4B626C;
     border: 2px solid #FFFFFF
 }
 .imgcarrinhopop{
-    height: 50px;
-    width: 50px;
+    height: 45px;
+    width: 45px;
     color: #FFFFFF;
 }
-  
-
-
