--- a/src/pages/TelaConta/Telaconta.css
+++ b/src/pages/TelaConta/Telaconta.css
@@ -27,22 +27,70 @@
     justify-content: start;
     width: 647px;
     height: 468px;
-    top: 365px;
-    left: 112px;
+    margin-left: 15%;
+    margin-top: 10%;
 }
-.titletextconta{
+.titletextcontadireita{
     font-family: Montserrat;
     font-size: 48px;
     font-weight: 500;
     text-align: left;
-    color:  #4B626C;
+    color: #4B626C;
 }
 .textcontadireita{
     font-family: Montserrat;
     font-size: 32px;
     font-weight: 400;
     text-align: left;
-    color: #4B626C;
+    color:#4B626C;
+}
+.buttoncontadireita{
+    display: flex;
+    flex-direction: row;
+    align-items: center;
+    justify-content: space-around;
+    width: 270px;
+    height: 45px;
+    border-radius: 10px;
+    border : 0;
+    background-color: #4B626C;
+    margin-top: 1%;
+}
+.fa-pencil-alt{
+  width: 20px;
+  height: 20px;
+  color: #FBF6F0;
+  font-size: 20px; 
+  display: inline-block;
+  vertical-align: middle; 
+}
+.fa-trash{
+    width: 20px;
+    height: 20px;
+    color: #FBF6F0;
+    font-size: 20px; 
+    display: inline-block;
+    vertical-align: middle; 
+  }
+.buttoncontadireitaadm{
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    justify-content: center;
+    width: 270px;
+    height: 45px;
+    border-radius: 10px;
+    border : 0;
+    background-color: #4B626C;
+    margin-top: 1%;
+    opacity: 0.5;
+}
+.textbutoncontadireita{
+    font-family: Montserrat;
+    font-size: 30px;
+    font-weight: 400;
+    text-align: left;
+    color: #FBF6F0;
 }
 .esquerdaconta{
     background-color: #4B626C;
@@ -51,10 +99,10 @@
     flex-direction: column;
     justify-content: space-evenly;
 }
-.tituloconta{
+.titulocontaesquerda{
     display: flex;
 }
-.titletextconta{
+.titletextcontaesquerda{
     font-family: Montserrat;
     font-size: 32px;
     font-weight: 400;
