--- a/src/pages/TelaConta/Telaconta.css
+++ b/src/pages/TelaConta/Telaconta.css
@@ -17,11 +17,11 @@
     display: flex;
     flex-direction: row;
 }
-.direitaconta{
+.esquerdaconta{
     width: 60vw;
     height: 90vh;
 }
-.textdireita{
+.textesquerda{
     display: flex;
     flex-direction: column;
     justify-content: start;
@@ -30,21 +30,21 @@
     margin-left: 15%;
     margin-top: 10%;
 }
-.titletextcontadireita{
+.titletextcontaesquerda{
     font-family: Montserrat;
     font-size: 48px;
     font-weight: 500;
     text-align: left;
     color: #4B626C;
 }
-.textcontadireita{
+.textcontaesquerda{
     font-family: Montserrat;
     font-size: 32px;
     font-weight: 400;
     text-align: left;
     color:#4B626C;
 }
-.buttoncontadireita{
+.buttoncontaesquerda{
     display: flex;
     flex-direction: row;
     align-items: center;
@@ -72,7 +72,7 @@
     display: inline-block;
     vertical-align: middle; 
   }
-.buttoncontadireitaadm{
+.buttoncontaesquerdaadm{
     display: flex;
     flex-direction: column;
     align-items: center;
@@ -85,24 +85,24 @@
     margin-top: 1%;
     opacity: 0.5;
 }
-.textbutoncontadireita{
+.textbutoncontaesquerda{
     font-family: Montserrat;
     font-size: 30px;
     font-weight: 400;
     text-align: left;
     color: #FBF6F0;
 }
-.esquerdaconta{
+.direitaconta{
     background-color: #4B626C;
     width: 40vw;
     display: flex;
     flex-direction: column;
     justify-content: space-evenly;
 }
-.titulocontaesquerda{
+.titulocontadireita{
     display: flex;
 }
-.titletextcontaesquerda{
+.titletextcontadireita{
     font-family: Montserrat;
     font-size: 32px;
     font-weight: 400;
@@ -158,11 +158,11 @@
     text-align: center;
     gap: 5px;
 }
-.contaimgesquerda{
+.contaimgdireita{
     width: 190px;
     height: 250px;
 }
-.contatextesquerda{
+.contatextdireita{
     font-family: Montserrat;
     font-size: 18px;
     font-weight: 400;
