--- a/src/pages/TelaConta/Telaconta.css
+++ b/src/pages/TelaConta/Telaconta.css
@@ -85,6 +85,19 @@
     margin-top: 1%;
     opacity: 0.5;
 }
+.inputUsername {
+    font-family: Montserrat;
+    font-size: 20px;
+    width: 300px;
+    max-width: 400px;
+    height: 50px;
+    border-radius: 15px;
+    background-color: #97A4A273;
+    border: none;   
+    color: #4B626C;
+    margin-bottom: 15px;
+    box-shadow: 0px 4px 4px 0px #00000040;
+}
 .textbutoncontaesquerda{
     font-family: Montserrat;
     font-size: 30px;
@@ -145,7 +158,7 @@
     flex-direction: column;
     justify-content: center;
     text-align: center;
-    gap: 5px;
+    gap: 10px;
 }
 .grid4conta{
     grid-column-start: 2;
