--- a/src/components/Cabecalho/Cabecalho.css
+++ b/src/components/Cabecalho/Cabecalho.css
@@ -24,12 +24,34 @@
     height: 10vh;
     width: 5vw;
 }
+.menu-toggle {
+    display: none; 
+    font-size: 50px;
+    background: none;
+    border: none;
+    color: #4B626C;
+    cursor: pointer;
+    margin-right: 20px;
+}
+
+.menu {
+    display: flex;
+    flex-direction: row;
+    gap: 35px;
+}
 .refcab{
     font-family: Montserrat;
     font-size: 32px;
     font-weight: 300;
     color: #4B626C;
     text-decoration: none;
+    margin-right: 10px;
+    margin-left: 10px;
+}
+.refcab-traco {
+    font-size: 32px;
+    font-weight: 300;
+    color: #4B626C;
 }
 .inputcab{
     box-shadow: 0px 4px 4px 0px #00000040;
@@ -47,6 +69,72 @@
     font-family: 'Font Awesome 5 Free', Arial, sans-serif;
     font-weight: 900;
     color: black;
-  }
+}
+@media(max-width: 425px){
+    .cabecalhogeral{
+        width: 425px;
+        height: 10%;
+        display: flex;
+        flex-direction: row;
+        justify-content: space-between;
+        align-items: center;
+        background-color: #FBF8F4;
+        position: fixed;
+        box-shadow: 0px 4px 4px 0px #00000040;
+        gap: 150px;
+    }
+    .cabecalhonav{
+        width: 100vw;
+        display: flex;
+        flex-direction: row;
+        justify-content: space-evenly;
+        align-items: center;
+        background-color: #FBF8F4;
+        gap: 35px;
+    }
+    .imgcab{
+        position: relative;
+        right: 60px;
+        height: 87px;
+        width: 87px;
+        margin: 0;
+    }
+    .menu-toggle {
+        position: relative;
+        left: 60px;
+        display: block;
+    }
+   
+    .menu {
+        display: none; 
+        flex-direction: column;
+        gap: 10px;
+        position: absolute;
+        top: 10vh;
+        right: 0;
+        background-color: #FBF8F4;
+        box-shadow: 0px 4px 4px 0px #00000040;
+        width: 100%;
+        padding: 20px;
+    }
 
+    .menu.active {
+        width: 425px;
+        height: auto;
+        display: flex; 
+        flex-direction: column;
+        justify-content: center;
+        align-items: center;
+        gap: 10px;
+        padding: 0 0 20px 0;
+    }
+    
+    .inputcab {
+        width: 300px;
+        margin-left:40px;
+    }
+    .refcab-traco {
+        display: none; 
+    }
+}
   
