--- a/src/components/Cabecalho/Cabecalho.css
+++ b/src/components/Cabecalho/Cabecalho.css
@@ -53,6 +53,9 @@
     font-weight: 300;
     color: #4B626C;
 }
+.refcab-reta {
+    display: none;
+}
 .inputcab{
     box-shadow: 0px 4px 4px 0px #00000040;
     width: 200px;
@@ -104,18 +107,31 @@
         left: 60px;
         display: block;
     }
-   
+    .menu-toggle.active {
+        color: #FFFFFF; 
+        background: none;
+        border: none;
+        cursor: pointer;
+        position: absolute;
+        top: 0px;
+        right: -290px;
+        z-index: 1100;
+        font-family: Montserrat;
+        font-weight: 100;
+    }
     .menu {
         display: none; 
         flex-direction: column;
-        gap: 10px;
-        position: absolute;
-        top: 10vh;
+        align-items: center;
+        position: fixed;
+        top: 0;
         right: 0;
-        background-color: #FBF8F4;
-        box-shadow: 0px 4px 4px 0px #00000040;
         width: 100%;
-        padding: 20px;
+        height: 100vh;
+        background-color: #4B626C;
+        box-shadow: 0px 4px 4px 0px #00000040;
+        z-index: 1000;
+        padding-top: 50px;
     }
 
     .menu.active {
@@ -126,15 +142,28 @@
         justify-content: center;
         align-items: center;
         gap: 10px;
-        padding: 0 0 20px 0;
+        padding: 70px 0 20px 0;
+        
     }
-    
     .inputcab {
         width: 300px;
         margin-left:40px;
     }
+    .refcab{
+        margin-top: 15px;
+        margin-bottom: 15px;
+        font-size: 24px;
+        font-weight: 300;
+        color: #FFFFFF;
+    }
     .refcab-traco {
-        display: none; 
+        display: none;
+    }
+    .refcab-reta {
+        width: 200px;
+        height: 1px;
+        display: block;
+        background-color: #FFFFFF;
     }
 }
   
