--- a/src/pages/TelaLogin/TelaLogin.css
+++ b/src/pages/TelaLogin/TelaLogin.css
@@ -7,10 +7,11 @@
     overflow: hidden;
 }
 .esquerdalogin{
+    margin-left: 50px;
     display: flex;
     flex-direction: column;
-    width: 30vw;
-    height: 100vh;
+    width: auto;
+    height: auto;
     justify-content: flex-start;
     align-items: center;
 }
@@ -21,6 +22,8 @@
     height: 50vh;
     justify-content: flex-start;
     align-items: center;
+    position: relative;
+    z-index: 2;
 }
 .titulologin{
     font-family: "Montserrat";
@@ -71,6 +74,8 @@
     width: 30vw;
     margin-left: 50%;
     margin-bottom: 25%;
+    position: relative;
+    z-index: 2;
 }
 .reflogin{
     text-decoration: none;
@@ -80,9 +85,9 @@
     text-align: left;
     font-size: 16px;
 }
-@media (max-width: 425px) {
+@media (max-width: 768px) {
     .gerallogin{
-        width: 425px;
+        width: 100%;
         height: 100%;
         display: flex;
         flex-direction: column-reverse;
@@ -90,9 +95,11 @@
         overflow: hidden;
     }
     .esquerdalogin{
+        margin-top: 620px;
+        margin-left: 0px;
         display: flex;
         flex-direction: column;
-        width: 425px;
+        width: 100%;
         height: auto;
         justify-content: flex-start;
         align-items: center;
@@ -109,7 +116,7 @@
         font-weight: 400;
     }
     .logar{
-       width: 425px;
+       width: 100%;
        height: auto;
        display: flex;
        flex-direction: column;
@@ -118,7 +125,6 @@
     .inputlogin{
         width: 338px;
         height: 32px;
-        border-radius: 5px 0px 0px 0px;
     }
     .botaologin{
         width: 42px;
@@ -132,8 +138,67 @@
         justify-content: flex-end;
         font-family: "Montserrat";
         text-align: start;
-        width: 425px;
+        width: 100%;
         height: auto;
         margin: 0px 0px 30px 85px;
+    }
+
+}
+@media (max-width: 425px) {
+    .gerallogin{
+        width: 425px;
+        height: 100%;
+        display: flex;
+        flex-direction: column-reverse;
+        justify-content: center;
+        overflow: hidden;
+    }
+    .esquerdalogin{
+        margin-top: 400px;
+        margin-left: 0px;
+        width: 425px;
+        
+    }
+    .logar{
+       width: 425px;
+       height: auto;
+       display: flex;
+       flex-direction: column;
+       justify-content: flex-start;
+    }
+   
+    
+    
+}
+@media (max-width: 375px) {
+    .gerallogin{
+        width: 375px;
+        justify-content: center;
+        height: 880px;
+    }
+    .esquerdalogin{
+        margin-left: 0;
+        width: 375px;
+    }
+}
+@media (max-width: 320px) {
+    .gerallogin{
+        width: 320px;
+        justify-content: center;
+        height: auto;
+    }
+    .esquerdalogin{
+        margin-top: 280px;
+        margin-left: 0;
+        width: 320px;
+    }
+    .botaologin{
+        width: 42px;
+        display: flex;
+        align-items: end;
+        margin-left: 250%;
+    }
+    .inputlogin{
+        width: 250px;
     }
 }
