--- a/src/pages/TelaLogin/TelaLogin.css
+++ b/src/pages/TelaLogin/TelaLogin.css
@@ -5,6 +5,7 @@
     display: flex;
     flex-direction: row;
     overflow: hidden;
+    position: fixed;
 }
 .esquerdalogin{
     margin-left: 50px;
@@ -92,7 +93,9 @@
         display: flex;
         flex-direction: column-reverse;
         justify-content: center;
-        overflow: hidden;
+        position: static;
+        overflow-y: scroll;
+        overflow-x: hidden;
     }
     .esquerdalogin{
         margin-top: 620px;
@@ -151,7 +154,9 @@
         display: flex;
         flex-direction: column-reverse;
         justify-content: center;
-        overflow: hidden;
+        position: static;
+        overflow-y: scroll;
+        overflow-x: hidden;
     }
     .esquerdalogin{
         margin-top: 400px;
@@ -175,6 +180,9 @@
         width: 375px;
         justify-content: center;
         height: 880px;
+        position: static;
+        overflow-y: scroll;
+        overflow-x: hidden;
     }
     .esquerdalogin{
         margin-left: 0;
@@ -186,6 +194,9 @@
         width: 320px;
         justify-content: center;
         height: auto;
+        position: static;
+        overflow-y: scroll;
+        overflow-x: hidden;
     }
     .esquerdalogin{
         margin-top: 280px;
