--- a/src/pages/TelaRecup/TelaRecup.css
+++ b/src/pages/TelaRecup/TelaRecup.css
@@ -5,6 +5,7 @@
     display: flex;
     flex-direction: row;
     overflow: hidden;
+    position: fixed;
 }
 .esquerdarecup{
     margin-left: 50px;
@@ -108,6 +109,9 @@
         display: flex;
         flex-direction: column-reverse;
         justify-content: center;
+        position: static;
+        overflow-y: scroll;
+        overflow-x: hidden;
         
     }
     .esquerdarecup{
@@ -183,7 +187,9 @@
         display: flex;
         flex-direction: column-reverse;
         justify-content: center;
-        overflow: hidden;
+        position: static;
+        overflow-y: scroll;
+        overflow-x: hidden;
     }
     .esquerdarecup{
         margin-top: 400px;
@@ -247,6 +253,9 @@
     .geralrecup{
         width: 375px;
         height: auto;
+        position: static;
+        overflow-y: scroll;
+        overflow-x: hidden;
     }
     .esquerdarecup{
         margin-top: 330px;
@@ -265,6 +274,7 @@
     .geralrecup{
         width: 320px;
         height: auto;
+        
     }
     .esquerdarecup{
         margin-top: 280px;
