--- a/src/pages/TelaRegistro/TelaRegistro.css
+++ b/src/pages/TelaRegistro/TelaRegistro.css
@@ -5,6 +5,7 @@
     display: flex;
     flex-direction: row;
     overflow: hidden;
+    position: fixed;
 }
 .esquerdareg{
     margin-left: 50px;
@@ -95,6 +96,9 @@
         display: flex;
         flex-direction: column-reverse;
         justify-content: center;
+        position: static;
+        overflow-y: scroll;
+        overflow-x: hidden;
     }
     .esquerdareg{
         margin-top: 620px;
@@ -153,7 +157,9 @@
         display: flex;
         flex-direction: column-reverse;
         justify-content: center;
-        overflow: hidden;
+        position: static;
+        overflow-y: scroll;
+        overflow-x: hidden;
     }
     .esquerdareg{
         margin-top: 400px;
@@ -207,6 +213,9 @@
     .geralreg{
         width: 375px;
         height: auto;
+        position: static;
+        overflow-y: scroll;
+        overflow-x: hidden;
     }
     .esquerdareg{
         margin-top: 330px;
@@ -220,6 +229,9 @@
         width: 320px;
         justify-content: center;
         height: auto;
+        position: static;
+        overflow-y: scroll;
+        overflow-x: hidden;
     }
     .esquerdareg{
         margin-top: 280px;
